force-app/main/default/objects/Budget__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Budget</relationshipLabel>
    <relationshipName>Budget</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>