force-app/main/default/objects/Budget__c/fields/Employees_Budget__c.field-meta.xml
<CustomField>
    <fullName>Employees_Budget__c</fullName>
    <label>Employees Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>