force-app/main/default/objects/Budget__c/fields/Full_Budget__c.field-meta.xml
<CustomField>
    <fullName>Full_Budget__c</fullName>
    <formula>Employees_Budget__c +  Projects_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>