force-app/main/default/objects/Budget__c/fields/Projects_Budget__c.field-meta.xml
<CustomField>
    <fullName>Projects_Budget__c</fullName>
    <label>Projects Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>